# CGFX_toad

./: CMakeLists.txt  cgfx_lab2.cpp  cgfx_lab2.h  coordinates_of_a_serious_toad.txt
